--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,3 +133,24 @@ section {
 }
 
 /* Hero Style End */
+
+.intro {
+    text-align: center;
+}
+
+.intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: solid 3px #fce138;
+    display: inline-block;
+}
+
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: auto;
+}
