--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,3 +289,21 @@ section {
 }
 
 /* REACH OUT STYLE ENDS */
+
+/* HOMEPAGE HERO */
+
+/* .hero {
+    margin: 20px;
+    background-color: white;
+    font-size: 20px;
+    color: blue;
+} */
+
+/* SECONDARY PAGE HERO */
+
+/* .hero-secondary {
+    margin: 20px;
+    background-color: black;
+    font-size: 20px;
+    color: red;
+} */
