--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
                             /*FOOTER STYLES */
 
@@ -63,17 +62,18 @@ footer {
     background-color: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -90,21 +90,35 @@ section {
 /* Hero Style Start */
 .hero {
     background-image: url("../img/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .hero-form {
     background-color: #fce138;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
     padding: 20px;
-    width: 500px;
     color: 024e76;
-    border: solid 3px #024e76
+    border: solid 3px #024e76;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
