--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ section {
 /* Hero Style End */
 
 .intro {
-    text-align: center;
+
 }
 
 .intro p {
@@ -164,20 +164,24 @@ section {
     width: 80%;
     font-size: 20px;
     margin: auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: solid 3px;
+    font-size: 55px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid #39a6b2;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -188,32 +192,57 @@ section {
     border-color: #39a6b2;
 }
 
-.steps div {
-    margin-bottom: 80px;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
+
+.step-info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex: 2 70%;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
+.step-text {
+    flex: 12;
+}
+
 
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -258,17 +287,10 @@ section {
     line-height: 1.3;
 }
 
-.section-title {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid #39a6b2;
-}
 
 /* REACH OUT STYLE START */
 
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -306,6 +328,10 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
 
 /* REACH OUT STYLE ENDS */
