--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --teritiary-color: #39a6b2;
+} 
+
 * {
     margin: 0;
     padding: 0;
@@ -8,13 +14,13 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
     /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
+    color: var(--teritiary-color);
 }
 
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--teritiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -27,19 +33,20 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav {
@@ -62,8 +69,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -71,13 +78,13 @@ header nav ul li a:hover {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
 }
                             /*FOOTER STYLES */
 
 footer {
-    background-color: #fce138;
+    background-color: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -86,7 +93,7 @@ footer {
 }
 
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -97,7 +104,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 section {
@@ -128,7 +135,7 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 }
@@ -137,11 +144,74 @@ section {
     background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     color: 024e76;
-    border: solid 3px #024e76;
+    border: solid 3px var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
+}
+
+.checkbox-wrapper input,
+.radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label,
+.radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before,
+.radio-wrapper label::before {
+    content: '';
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid var(--secondary-color);
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle, var(--teritiary-color), var(--secondary-color));
+}
+
+.checkbox-wrapper label::after {
+    content: '';
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
 }
 
 .hero-form h3 {
@@ -154,7 +224,7 @@ section {
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -175,8 +245,8 @@ section {
 }
 
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     padding: 10px 20px;
     border: none;
     margin: 5px;
@@ -186,18 +256,16 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--teritiary-color);
 }
 
 /* Hero Style End */
 
-.intro {
 
-}
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--teritiary-color);
     width: 80%;
     font-size: 20px;
     margin: auto;
@@ -205,16 +273,16 @@ section {
 }
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .section-title {
     font-size: 55px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: solid 3px;
     font-size: 48px;
     padding: 0 100px 20px 100px;
-    border-bottom: 3px solid #39a6b2;
+    border-bottom: 3px solid var(--teritiary-color);
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -222,18 +290,18 @@ section {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--teritiary-color);
 }
 
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--teritiary-color);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -245,24 +313,24 @@ section {
 }
 
 .step:nth-child(even) {
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--teritiary-color);
 }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--teritiary-color);
     font-size: 18px;
 }
 
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-info {
@@ -287,8 +355,8 @@ section {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -346,11 +414,11 @@ section {
 }
 
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info iframe {
@@ -363,7 +431,7 @@ section {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
@@ -376,7 +444,7 @@ section {
 }
 
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .flex-row {
@@ -385,11 +453,11 @@ section {
 
 .contact-form input,
 .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -406,8 +474,8 @@ outline: none;
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -415,8 +483,8 @@ outline: none;
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--teritiary-color);
 }
 
 /* REACH OUT STYLE ENDS */
@@ -426,7 +494,7 @@ outline: none;
 
 /* MEDIA QUERYS FOR MOBILE */
 
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+/* MEDIA QUERYS FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
@@ -516,7 +584,7 @@ outline: none;
     }
 
     .intro p {
-        width 100%
+        width: 100%;
     }
 
     .trainer {
